	  support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-20030209-1.c,
	  support/regression/tests/gcc-torture-execute-950915-1.c,
	  support/regression/tests/bug1723128.c,
	  support/regression/tests/gcc-torture-execute-20001221-1.c,
	  support/regression/tests/gcc-torture-execute-20030307-1.c:
	  Regression testing for s08 port.
	* device/include/stdarg.h:
	  Fix variable arguments for s08.
	* device/lib/_mullong.c:
	  Fix long multiplication for s08.

2012-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/SDCCmain.c,
	  src/port.h,
	  src/SDCCglue.c,
	  src/hc08/main.c,
	  src/SDCCpeeph.c,
	  src/hc08/hc08.h,
	  device/lib/Makefile.in,
	  device/lib/s08:
	  Dummy (behaves as HC08) S08 port.

2012-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdarg.h,
	  device/include/string.h,
	  device/include/setjmp.h,
	  device/lib/Makefile.in,
	  configure.in,
	  src/SDCCopt.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/z80.h,
	  src/SDCCmain.c,
	  src/port.h,
	  sim/ucsim/aclocal.m4,
	  sim/ucsim/configure,
	  device/lib/r3ka:
	  Dummy (behaves as Rabbit 2000/3000) Rabbit 3000A port.

2012-05-17 Leland Morrison <enigmalee AT sourceforge.net>

	* sim/ucsim/hc08/hc08.cc: Fix for opcodes 0xAE, 0xBE, and 0xCE op-decode

2012-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3521024.c:
	  Regression test for bug #3521024.

2012-05-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Use non-destructive bit tests when possible
	  (rfe #3526285). Fixed loss of association between generated
	  assembly and iCodes.
	* src/hc08/peeph.def: Additional rules for conditional branches and
	  to remove unused labels.

2012-05-16 Maarten Brock <sourceforge.brock AT dse.nl>
